--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.38.0
-streamlit-aggrid==0.3.4.post3
-gspread==6.1.2
-oauth2client==4.1.3
-pandas==2.2.2
-plotly==5.23.0
+streamlit
+streamlit-aggrid
+gspread
+oauth2client
+pandas
+plotly
 google-auth
