--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit==1.49.1
-pandas
-plotly
-gspread
+pandas==2.3.2
+plotly==6.3.0
+gspread==6.2.1
 google-auth
-streamlit-aggrid
+streamlit-aggrid==1.1.8 post1
 oauth2client
+
 
