--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ streamlit==1.49.1
 pandas==2.3.2
 plotly==6.3.0
 gspread==6.2.1
-google-auth
+google-auth==2.40.3
 streamlit-aggrid==1.1.8 post1
-oauth2client
+oauth2client=4.1.3
+
 
 
