--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ pandas==2.3.2
 plotly==6.3.0
 gspread==6.2.1
 google-auth==2.40.3
-streamlit-aggrid==1.1.8 post1
-oauth2client=4.1.3
+streamlit-aggrid==1.1.8.post1
+oauth2client==4.1.3
+
 
 
 
